--- a/sistema-marcaje-frontend/src/app/shared/pages/home/home.component.html
+++ b/sistema-marcaje-frontend/src/app/shared/pages/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="home-container">
+    <h1>Bienvenido al Sistema de Marcajes</h1>
+    <p>Para comenzar, por favor inicia sesion o regístrate en el sistema.</p>
+    <div class="text-center button-group">
+        <button class="btn btn-success" [routerLink]="'/login'">
+          Iniciar Sesion
+        </button>
+        <button class="btn btn-primary" [routerLink]="'/signup'">
+          Registrarse
+        </button>
+    </div>
+  </div>
+  
