--- a/sistema-marcaje-frontend/src/app/marcaje/pages/detalle-usuario/detalle-usuario.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/pages/detalle-usuario/detalle-usuario.component.html
@@ -34,7 +34,7 @@
           </ul>
         </div>
         <div class="card-footer text-center">
-          <button class="btn btn-secondary" routerLink="/listaUsuarios">Regresar</button>
+          <button class="btn btn-secondary" [routerLink]="['/user/listaUsuarios']">Regresar</button>
         </div>
       </div>
     </div>
