--- a/sistema-marcaje-frontend/src/app/marcaje/pages/salida/salida.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/pages/salida/salida.component.html
@@ -1,17 +1,23 @@
-<div class="container mt-5">
-    <div class="card">
-      <div class="card-header">
-        <h3>Registro de Salida</h3>
-      </div>
-      <div class="card-body">
-        <form (ngSubmit)="registrarSalida()">
-          <div class="form-group">
-            <label for="horaSalida">Hora Actual:</label>
-            <input type="text" id="horaSalida" class="form-control" [value]="horaActual" readonly>
-          </div>
-          <button type="submit" class="btn btn-primary mt-3" [disabled]="!registrarSalida">Registrar Salida</button>
-        </form>
-      </div>
-    </div>
+<div class="row">
+  <div class="col-md-2">
+    <marcaje-sidebar></marcaje-sidebar>
   </div>
-  
+  <div class="col-md-10">
+    <div class="container mt-5">
+        <div class="card">
+          <div class="card-header">
+            <h3>Registro de Salida</h3>
+          </div>
+          <div class="card-body">
+            <form (ngSubmit)="registrarSalida()">
+              <div class="form-group">
+                <label for="horaSalida">Hora Actual:</label>
+                <input type="text" id="horaSalida" class="form-control" [value]="horaActual" readonly>
+              </div>
+              <button type="submit" class="btn btn-primary mt-3" [disabled]="!registrarSalida">Registrar Salida</button>
+            </form>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
