--- a/sistema-marcaje-frontend/src/app/shared/pages/signup/signup.component.html
+++ b/sistema-marcaje-frontend/src/app/shared/pages/signup/signup.component.html
@@ -50,6 +50,7 @@
                             <button type="reset" class="btn btn-secondary ms-3">
                                 Limpiar
                             </button>
+                            <button class="btn btn-primary ms-3" [routerLink]="['/user/listaUsuarios']">Regresar</button>
                         </div>
                     </form>
                 </div>
