--- a/sistema-marcaje-frontend/src/app/marcaje/pages/editar-usuario/editar-usuario.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/pages/editar-usuario/editar-usuario.component.html
@@ -14,80 +14,40 @@
       <form *ngIf="usuario" (ngSubmit)="actualizarUsuario()" #usuarioForm="ngForm">
         <div class="form-group">
           <label for="username">Nombre de Usuario</label>
-          <input 
-            type="text" 
-            id="username" 
-            class="form-control" 
-            [(ngModel)]="usuario.username" 
-            name="username" 
-            required
-            [readonly]="true" 
-          />
+          <input type="text" id="username" class="form-control" [(ngModel)]="usuario.username" name="username" required
+            [readonly]="true" />
         </div>
 
         <div class="form-group">
           <label for="nombre">Nombre</label>
-          <input 
-            type="text" 
-            id="nombre" 
-            class="form-control" 
-            [(ngModel)]="usuario.nombre" 
-            name="nombre" 
-            required
-          />
+          <input type="text" id="nombre" class="form-control" [(ngModel)]="usuario.nombre" name="nombre" required />
         </div>
 
         <div class="form-group">
           <label for="apellido">Apellido</label>
-          <input 
-            type="text" 
-            id="apellido" 
-            class="form-control" 
-            [(ngModel)]="usuario.apellido" 
-            name="apellido" 
-            required
-          />
+          <input type="text" id="apellido" class="form-control" [(ngModel)]="usuario.apellido" name="apellido"
+            required />
         </div>
 
         <div class="form-group">
           <label for="email">Correo Electrónico</label>
-          <input 
-            type="email" 
-            id="email" 
-            class="form-control" 
-            [(ngModel)]="usuario.email" 
-            name="email" 
-            required
-          />
+          <input type="email" id="email" class="form-control" [(ngModel)]="usuario.email" name="email" required />
         </div>
 
         <div class="form-group">
           <label for="telefono">Teléfono</label>
-          <input 
-            type="text" 
-            id="telefono" 
-            class="form-control" 
-            [(ngModel)]="usuario.telefono" 
-            name="telefono" 
-            required
-          />
+          <input type="text" id="telefono" class="form-control" [(ngModel)]="usuario.telefono" name="telefono"
+            required />
         </div>
 
-        <button 
-          type="submit" 
-          class="btn btn-primary" 
-          [disabled]="isLoading"
-        >
+        <button type="submit" class="btn btn-primary" [disabled]="isLoading">
           {{ isLoading ? 'Actualizando...' : 'Actualizar Usuario' }}
         </button>
-        
-        <a 
-          [routerLink]="['/user/listaUsuarios']" 
-          class="btn btn-secondary ml-2"
-        >
-          Cancelar
-        </a>
+
       </form>
+      <a [routerLink]="['/user/listaUsuarios']" class="btn btn-outline-secondary ml-2">
+        Cancelar
+      </a>
     </div>
   </div>
 </div>
