--- a/sistema-marcaje-frontend/src/app/shared/pages/login/login.component.html
+++ b/sistema-marcaje-frontend/src/app/shared/pages/login/login.component.html
@@ -21,7 +21,7 @@
 
             <div class="text-center button-group">
               <button mat-raised-button class="btn btn-primary">Iniciar sesión</button>
-              <button type="reset" class="btn btn-secondary">Limpiar</button> 
+              <button type="reset" class="btn btn-secondary" [routerLink]="['/home']">Regresar</button> 
             </div>
           </form>
         </mat-card>
