--- a/sistema-marcaje-frontend/src/styles.css
+++ b/sistema-marcaje-frontend/src/styles.css
@@ -47,3 +47,5 @@ background: #f5f5f5;}
 .ml70{
     margin-left: 70px !important
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
