--- a/sistema-marcaje-frontend/src/app/marcaje/pages/entrada/entrada.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/pages/entrada/entrada.component.html
@@ -8,7 +8,7 @@
     <div class="container mt-5">
         <div class="card">
           <div class="card-header">
-            <h3>Registro de Entrada</h3>
+            <h1 class="text-center">Registro de Entrada</h1>
           </div>
           <div class="card-body">
             <form (ngSubmit)="registrarEntrada()">
@@ -16,7 +16,8 @@
                 <label for="horaEntrada">Hora Actual:</label>
                 <input type="text" id="horaEntrada" class="form-control" [value]="horaActual" readonly>
               </div>
-              <button type="submit" class="btn btn-primary mt-3" [disabled]="!entradaRegistrada">Registrar Entrada</button>
+              <button type="submit" class="btn btn-primary me-3 mt-3" [disabled]="!registrarEntrada">Registrar</button>
+              <button class="btn btn-secondary me-3 mt-3" (click)="salir()">Salir</button>
             </form>
           </div>
         </div>
@@ -24,4 +25,4 @@
   </div>
 </div>
 
-  
+
