--- a/sistema-marcaje-frontend/src/app/marcaje/pages/lista-usuarios/lista-usuarios.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/pages/lista-usuarios/lista-usuarios.component.html
@@ -35,14 +35,14 @@
                 <td>{{ usuario.email }}</td>
                 <td>{{ usuario.telefono }}</td>
                 <td>
-                  <a [routerLink]="['/user/listaUsuarios', usuario.username]" class="btn btn-outline-info m-1">
-                    <i class="bi bi-eye"> detalle</i>
+                  <a [routerLink]="['/user/listaUsuarios', usuario.username]" class="btn btn-info m-1 color-withe">
+                    <i class="bi bi-eye"> </i>
                   </a>
-                  <a [routerLink]="['/user/editar', usuario.id]" class="btn btn-outline-primary m-1">
-                    <i class="bi bi-pencil">editar</i>
+                  <a [routerLink]="['/user/editar', usuario.id]" class="btn btn-primary m-1">
+                    <i class="bi bi-pencil"></i>
                   </a>
-                  <button (click)="eliminarUsuario(usuario.id!)" class="btn btn-outline-danger m-1">
-                    <i class="bi bi-trash">eliminar</i>
+                  <button (click)="eliminarUsuario(usuario.id!)" class="btn btn-danger m-1">
+                    <i class="bi bi-trash"></i>
                   </button>
                 </td>
               </tr>
