--- a/sistema-marcaje-frontend/src/app/marcaje/pages/salida/salida.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/pages/salida/salida.component.html
@@ -6,7 +6,7 @@
     <div class="container mt-5">
         <div class="card">
           <div class="card-header">
-            <h3>Registro de Salida</h3>
+            <h1 class="text-center">Registro de Salida</h1>
           </div>
           <div class="card-body">
             <form (ngSubmit)="registrarSalida()">
@@ -14,7 +14,10 @@
                 <label for="horaSalida">Hora Actual:</label>
                 <input type="text" id="horaSalida" class="form-control" [value]="horaActual" readonly>
               </div>
-              <button type="submit" class="btn btn-primary mt-3" [disabled]="!registrarSalida">Registrar Salida</button>
+              <div class="text-center button-group">
+                <button type="submit" class="btn btn-primary" [disabled]="!registrarSalida">Registrar Salida</button>
+                <button class="btn btn-secondary" (click)="salir()"> Salir</button>
+              </div>
             </form>
           </div>
         </div>
