--- a/sistema-marcaje-frontend/src/app/marcaje/components/sidebar/sidebar.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/components/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
 
       <mat-list-item>
         <mat-icon>list</mat-icon>
-        <a mat-button routerLink="/user/historial">Lista de Marcaje</a>
+        <a mat-button routerLink="/user/prueba">Lista de Marcaje</a>
       </mat-list-item>
     </mat-nav-list>
   </mat-sidenav-content>
