--- a/sistema-marcaje-frontend/src/app/marcaje/pages/lista-usuarios/lista-usuarios.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/pages/lista-usuarios/lista-usuarios.component.html
@@ -35,10 +35,10 @@
                 <td>{{ usuario.email }}</td>
                 <td>{{ usuario.telefono }}</td>
                 <td>
-                  <a [routerLink]="['/user/listaUsuarios', usuario.username]" class="btn btn-info m-1 color-withe">
+                  <a [routerLink]="['/marcajes/listaUsuarios', usuario.username]" class="btn btn-info m-1 color-withe">
                     <i class="bi bi-eye"> </i>
                   </a>
-                  <a [routerLink]="['/user/editar', usuario.id]" class="btn btn-primary m-1">
+                  <a [routerLink]="['/marcajes/editar', usuario.id]" class="btn btn-primary m-1">
                     <i class="bi bi-pencil"></i>
                   </a>
                   <button (click)="eliminarUsuario(usuario.id!)" class="btn btn-danger m-1">
