--- a/sistema-marcaje-frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/sistema-marcaje-frontend/src/app/shared/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <a *ngIf="!loginService.isUserAuthenticated()" [routerLink]="'home'" mat-button >Sistema de marcaje</a>
   <span class="example-spacer"></span>
   <div class="auth-buttons">
-    <a *ngIf="!loginService.isUserAuthenticated()" [routerLink]="'login'" mat-button >Iniciar sesión</a>
+    <a *ngIf="!loginService.isUserAuthenticated()" [routerLink]="'/auth/login'" mat-button >Iniciar sesión</a>
     <a *ngIf="loginService.isUserAuthenticated()" (click)="logout()" mat-button >Salir</a>
   </div>
 </mat-toolbar>
