--- a/sistema-marcaje-frontend/src/app/shared/pages/signup/signup.component.html
+++ b/sistema-marcaje-frontend/src/app/shared/pages/signup/signup.component.html
@@ -1,116 +1,56 @@
-<!-- <div class="bootstrap-wrapper">
-    <div class="container">
-        <div class="row mt-5">
-            <div class="col-md-6 offset-md-3">
-                <div class="card shadow-sm p-4">
-                    <div class="text-center">
-                        <img src="../../../assets/agregar-usuario.png" alt="Usuario" width="100" height="100" />
-                    </div>
-                    <h1 class="text-center mb-4">Regístrate aquí</h1>
-
-                    <form (ngSubmit)="formSubmit()">
-                        <div class="mb-3">
-                            <label for="nombre" class="form-label">Nombre:</label>
-                            <input [(ngModel)]="user.nombre" name="nombre" id="nombre" type="text" class="form-control"
-                                placeholder="Ingrese su nombre" required />
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="apellido" class="form-label">Apellido:</label>
-                            <input [(ngModel)]="user.apellido" name="apellido" id="apellido" type="text"
-                                class="form-control" placeholder="Ingrese su apellido" required />
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email:</label>
-                            <input [(ngModel)]="user.email" name="email" id="email" type="email" class="form-control"
-                                placeholder="Ingrese su correo" required />
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="telefono" class="form-label">Teléfono:</label>
-                            <input [(ngModel)]="user.telefono" name="telefono" id="telefono" type="text"
-                                class="form-control" placeholder="Ingrese su teléfono" required />
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Nombre de usuario:</label>
-                            <input [(ngModel)]="user.username" name="username" id="username" type="text"
-                                class="form-control" placeholder="Ingrese su nombre de usuario" required />
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Contraseña:</label>
-                            <input [(ngModel)]="user.password" name="password" id="password" type="password"
-                                class="form-control" placeholder="Ingrese su contraseña" required />
-                        </div>
-
-                        <div class="text-center">
-                            <button (click)="formSubmit()" class="btn btn-success">
-                                Agregar
-                            </button>
-
-                            <button class="btn btn-secondary ms-3" [routerLink]="['/user/listaUsuarios']">
-                                Regresar
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
- -->
-
 <div class="bootstrap-wrapper">
-    <div class="container">
-      <div class="row mt20">
-        <div class="col-md-6 offset-md-3">
-          <mat-card class="login-card">
-            <div class="container text-center">
-              <img src="../../../assets/agregar-usuario.png" width="100" height="100">
+  <div class="container">
+    <div class="row mt20">
+      <div class="col-md-6 offset-md-3">
+        <mat-card class="login-card">
+          <div class="container text-center">
+            <img src="../../../assets/agregar-usuario.png" width="100" height="100">
+          </div>
+          <h1 class="text-center">Agregar usuario</h1>
+          <form (ngSubmit)="formSubmit()">
+
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Nombre:</mat-label>
+              <input [(ngModel)]="user.nombre" name="nombre" matInput placeholder="Ingrese el nombre" required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Apellido:</mat-label>
+              <input [(ngModel)]="user.apellido" name="apellido" matInput placeholder="Ingrese el apellido" required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Email:</mat-label>
+              <input [(ngModel)]="user.email" type="email" name="email" matInput placeholder="Ingrese el apellido"
+                required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Telefono:</mat-label>
+              <input [(ngModel)]="user.telefono" type="number" name="telefono" matInput
+                placeholder="Ingrese número telefonico" required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Nombre de usuario:</mat-label>
+              <input [(ngModel)]="user.username" name="username" matInput placeholder="Ingrese el nombre de usuario"
+                required>
+            </mat-form-field>
+
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Contraseña:</mat-label>
+              <input [(ngModel)]="user.password" type="password" name="apellido" matInput
+                placeholder="Ingrese la contraseña" required>
+            </mat-form-field>
+
+            <div class="text-center button-group">
+              <button mat-raised-button (click)="formSubmit()" class="btn btn-success">Agregar</button>
+              <button type="reset" class="btn btn-secondary ms-3"
+                [routerLink]="['/marcajes/listaUsuarios']">Regresar</button>
             </div>
-            <h1 class="text-center">Agregar usuario</h1>
-            <form (ngSubmit)="formSubmit()">
-  
-              <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Nombre:</mat-label>
-                <input  [(ngModel)]="user.nombre" name="nombre" matInput placeholder="Ingrese el nombre" required>
-              </mat-form-field>
-  
-              <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Apellido:</mat-label>
-                <input [(ngModel)]="user.apellido" name="apellido" matInput placeholder="Ingrese el apellido" required>
-              </mat-form-field>
-
-              <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Email:</mat-label>
-                <input [(ngModel)]="user.email" type="email" name="email" matInput placeholder="Ingrese el apellido" required>
-              </mat-form-field>
-
-              <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Telefono:</mat-label>
-                <input [(ngModel)]="user.telefono" type="number" name="telefono" matInput placeholder="Ingrese número telefonico" required>
-              </mat-form-field>
-
-              <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Nombre de usuario:</mat-label>
-                <input [(ngModel)]="user.username" name="username" matInput placeholder="Ingrese el nombre de usuario" required>
-              </mat-form-field>
-  
-              <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Contraseña:</mat-label>
-                <input [(ngModel)]="user.password" type="password" name="apellido" matInput placeholder="Ingrese la contraseña" required>
-              </mat-form-field>
-  
-              <div class="text-center button-group">
-                <button mat-raised-button  (click)="formSubmit()" class="btn btn-success">Agregar</button>
-                <button type="reset" class="btn btn-secondary ms-3" [routerLink]="['/user/listaUsuarios']">Regresar</button> 
-              </div>
-            </form>
-          </mat-card>
-        </div>
+          </form>
+        </mat-card>
       </div>
     </div>
   </div>
-  
+</div>
