--- a/sistema-marcaje-frontend/src/app/marcaje/components/sidebar/sidebar.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/components/sidebar/sidebar.component.html
@@ -10,12 +10,12 @@
 
       <mat-list-item>
         <mat-icon>group</mat-icon>
-        <a mat-button routerLink="/marcajes/listaUsuarios">Lista Usuarios</a>
+        <a mat-button routerLink="/marcajes/listaUsuarios">Lista Empleados</a>
       </mat-list-item>
 
       <mat-list-item>
         <mat-icon>list</mat-icon>
-        <a mat-button routerLink="/marcajes/prueba">Lista de Marcaje</a>
+        <a mat-button routerLink="/marcajes/historialMarcajes">Lista de Marcaje</a>
       </mat-list-item>
     </mat-nav-list>
   </mat-sidenav-content>
