--- a/sistema-marcaje-frontend/src/app/shared/pages/signup/signup.component.html
+++ b/sistema-marcaje-frontend/src/app/shared/pages/signup/signup.component.html
@@ -44,7 +44,7 @@
             </mat-form-field>
 
             <div class="text-center button-group">
-              <button mat-raised-button (click)="formSubmit()" class="btn btn-success">Agregar</button>
+              <button mat-raised-button class="btn btn-success">Agregar</button>
               <button type="reset" class="btn btn-secondary ms-3"
                 [routerLink]="['/marcajes/listaUsuarios']">Regresar</button>
             </div>
