--- a/sistema-marcaje-frontend/src/app/marcaje/pages/lista-usuarios/lista-usuarios.component.html
+++ b/sistema-marcaje-frontend/src/app/marcaje/pages/lista-usuarios/lista-usuarios.component.html
@@ -8,7 +8,7 @@
     <div class="container mt-5">
       <div class="card">
         <div class="card-header">
-          <h2 class="mb-0 text-center">Lista de Usuarios</h2>
+          <h2 class="mb-0 text-center">Lista de Empleados</h2>
           <button [routerLink]="['/signup']" class="btn btn-outline-light m-1">
             Agregar usuario
           </button>
